--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
           <h2>Time to feel like home,</h2>
           <label>
             <span>Name</span>
-            <input type="text" class="form-control" name="user" id="un" [(ngModel)]=uObj.username>
+            <input type="text" class="form-control" name="username" id="un" [(ngModel)]=uObj.username>
           </label>
           <label>
             <span>Password</span>
@@ -47,12 +47,11 @@
           </label>
           <label>
             <span>Email</span>
-            <input type="email" class="form-control" name="mail" id="email" [(ngModel)]=uObj.email>
+            <input type="email" class="form-control" name="email" id="email" [(ngModel)]=uObj.email>
           </label>
           <button type="submit" class="submit mb-3">Sign Up</button>
         </div>
       </form>
-      
     </div>
   </div>
   
