--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div >
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Learningapp</a>
@@ -6,16 +7,16 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" routerLink="home" routerLinkActive="active">Home</a>
+        <li *ngIf="!us.masterLoginStatus" class="nav-item">
+          <a  class="nav-link active" routerLink="home" routerLinkActive="active">Home</a>
         </li>
-        <li class="nav-item" *ngIf="!us.userLoginStatus">
+        <li class="nav-item" *ngIf="!us.userLoginStatus && !us.masterLoginStatus">
           <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
         </li>
-        <li class="nav-item" *ngIf="!us.userLoginStatus">
+        <li class="nav-item" *ngIf="us.userLoginStatus">
           <a class="nav-link" routerLink="contactus" routerLinkActive="active">Contactus</a>
         </li>
-        <li class="nav-item" *ngIf="us.userLoginStatus">
+        <li class="nav-item" *ngIf="us.userLoginStatus || us.masterLoginStatus">
           <a class="nav-link" routerLink="login" routerLinkActive="active" (click)="userLogout()">Logout</a>
         </li>
         <li class="nav-item" *ngIf="us.userLoginStatus">
@@ -31,6 +32,7 @@
     </div>
   </div>
 </nav>
+</div>
   <div class="container-fluid">
   <router-outlet></router-outlet>
   </div>
