--- a/src/app/newadmin/newadmin.component.html
+++ b/src/app/newadmin/newadmin.component.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills nav-fill mt-5">
     <li class="nav-item">
-      <a class="nav-link"  routerLink="add-product" routerLinkActive="active">Add product</a>
+      <a class="nav-link"  routerLink="add-product" routerLinkActive="active">Add Question</a>
     </li>
     
   
