--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li *ngIf="!us.masterLoginStatus" class="nav-item">
-          <a  class="nav-link active" routerLink="home" routerLinkActive="active">Home</a>
+          <a  class="nav-link " routerLink="home" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item" *ngIf="!us.userLoginStatus && !us.masterLoginStatus">
           <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
@@ -23,7 +23,7 @@
           <a class="nav-link" routerLink="courses" routerLinkActive="active">Course</a>
         </li>
         <li class="nav-item" *ngIf="us.userLoginStatus">
-          <a class="nav-link" routerLink="library" routerLinkActive="active">Library</a>
+          <a class="nav-link" routerLink="leaderboard" routerLinkActive="active">Leaderboard</a>
         </li>
         <li class="nav-item" *ngIf="us.userLoginStatus">
           <a class="nav-link" routerLink="quiz" routerLinkActive="active">Quiz</a>
@@ -33,7 +33,7 @@
   </div>
 </nav>
 </div>
-  <div class="container-fluid">
-  <router-outlet></router-outlet>
-  </div>
+<div class="container-fluid">
+<router-outlet></router-outlet>
+</div>
   
