--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -1,1 +1,19 @@
-<p>leaderboard works!</p>
+<div class="container bg-white">
+    <table class="table table-hover mt-3 mx-auto w-75">
+        <thead class="thead-light">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Subject </th>
+            <th scope="col">Marks</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let item of marks|keyvalue; index as i">
+            <th scope="row">{{i+1}}</th>
+            <td>{{item.key}}</td>
+            <td>{{item.value}}</td>
+        </tr>
+        
+        </tbody>
+    </table>
+</div>
