--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,8 +3,6 @@
     <form #ref="ngForm" (ngSubmit)="onLogin()">
       <div class="form sign-in" >
         <h2>Welcome back,</h2>
-        
-
 
         <label>
           <span>Username</span>
@@ -38,7 +36,7 @@
         <div class="form sign-up">
           <h2>Time to feel like home,</h2>
           <label>
-            <span>Name</span>
+            <span>Username</span>
             <input type="text" class="form-control" name="username" id="un" [(ngModel)]=uObj.username>
           </label>
           <label>
