--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,9 +1,8 @@
-
- <div class="container">
+<div class="container">
   <h1 class="text-info text-center" >SUBJECTS</h1>
-  <div class="row row-cols-s-1 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 mt-4 mb-4">
-      <div class="col" *ngFor="let m of subjects">
-        <div class="card" style="width: 18rem;">
+  <div class="row row-cols-s-1 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 m-3">
+      <div class="col m-3" *ngFor="let m of subjects">
+        <div class="card " style="width: 18rem;">
           <!-- <img src="..." class="card-img-top" alt="..."> -->
           <div class="card-body">
             <h5 class="card-title">{{m}}</h5>
@@ -11,6 +10,6 @@
             <a href="#" class="btn btn-primary" routerLink="{{m}}">Take Test</a>
           </div>
         </div>
+      </div>   
   </div>
-  </div>
-  </div>
+</div>
