--- a/src/app/newadmin/newadmin.component.html
+++ b/src/app/newadmin/newadmin.component.html
@@ -1,6 +1,9 @@
-<ul class="nav nav-pills nav-fill mt-5">
-    <li class="nav-item">
-      <a class="nav-link"  routerLink="add-product" routerLinkActive="active">Add Question</a>
+<ul class="nav nav-pills nav-fill mt-3">
+    <li class="nav-item mx-3">
+      <a class="nav-link text-white bg-primary"  routerLink="add-test" routerLinkActive="active">Add Question</a>
+    </li>
+    <li class="nav-item mx-3">
+      <a class="nav-link text-white bg-primary"  routerLink="view-scores" routerLinkActive="active">View Results</a>
     </li>
     
   
