--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,9 +7,12 @@
 .active{
     font-weight: bold;
     border-bottom: 2px solid white;
+    color: bisque;
 }
 .navbar-brand{
     font-family: 'Amatic SC', cursive;
     font-size:x-large;
+    color: aqua;
 }
+
     
