--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -13,7 +13,7 @@
                       <div class="inner">
                           <h1>C</h1>
                           <p> is a general-purpose, procedural computer programming language</p>
-                          <button class="btn btn-warning p-2 mt-2 text-white" (click)="onClick()">learn course</button>
+                          <button class="btn btn-warning p-2 mt-2 text-white" (click)="onClick(1)">learn course</button>
                       </div>
                     </div>
                   </div>
@@ -30,7 +30,7 @@
                       <div class="inner">
                           <h1>C++</h1>
                         <p>is an object oriented language</p>
-                        <button class="btn btn-warning p-2 mt-2 text-white" (click)="onClick()">learn course</button>
+                        <button class="btn btn-warning p-2 mt-2 text-white" (click)="onClick(2)">learn course</button>
                       </div>
                     </div>
                   </div>
@@ -47,7 +47,7 @@
                       <div class="inner">
                           <h1>SQL</h1>
                         <p> stands for Structured Query Language.</p>
-                        <button class="btn btn-warning p-2 mt-2 text-white" (click)="onClick()">learn course</button>
+                        <button class="btn btn-warning p-2 mt-2 text-white" (click)="onClick(3)">learn course</button>
                       </div>
                     </div>
                   </div>
@@ -64,7 +64,7 @@
                       <div class="inner">
                           <h1>PYTHON</h1>
                         <p> is an interpreted high-level general-purpose programming language.</p>
-                        <button class="btn btn-warning p-2 mt-2 text-white" (click)="onClick()">learn course</button>
+                        <button class="btn btn-warning p-2 mt-2 text-white" (click)="onClick(4)">learn course</button>
                       </div>
                     </div>
                   </div>
