--- a/src/app/coursedetails/coursedetails.component.html
+++ b/src/app/coursedetails/coursedetails.component.html
@@ -1,1 +1,26 @@
-<p>coursedetails works!</p>
+<div class="container-fluid mt-2">
+
+    
+        <object *ngIf="message==1" data="../../assets/c_material.pdf" type="application/pdf" width="90%" height="900px">
+            <p>Your web browser doesn't have a PDF plugin.
+                Instead you can <a href="../../assets/c_material.pdf">click here to download the PDF file.</a></p>
+        </object>
+
+        <object  *ngIf="message==2" data="../../assets/cpp_material.pdf" type="application/pdf" width="90%" height="900px">
+            <p>Your web browser doesn't have a PDF plugin.
+                Instead you can <a href="../../assets/cpp_material.pdf">click here to download the PDF file.</a></p>
+        </object>
+
+        <object *ngIf="message==3" data="../../assets/sql_material.pdf" type="application/pdf" width="90%" height="900px">
+            <p>Your web browser doesn't have a PDF plugin.
+                Instead you can <a href="../../assets/sql_material.pdf">click here to download the PDF file.</a></p>
+        </object>
+
+        <object  *ngIf="message==4" data="../../assets/python_material.pdf" type="application/pdf" width="90%" height="900px">
+            <p>Your web browser doesn't have a PDF plugin.
+                Instead you can <a href="../../assets/python_material.pdf">click here to download the PDF file.</a></p>
+        </object>
+
+        
+
+</div>
