--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,9 @@
         <li class="nav-item" *ngIf="us.userLoginStatus">
           <a class="nav-link" routerLink="quiz" routerLinkActive="active">Quiz</a>
         </li>
+        
         <li class="nav-item" *ngIf="us.userLoginStatus">
-          <a class="nav-link" routerLink="leaderboard" routerLinkActive="active">Leaderboard</a>
+          <a class="nav-link" routerLink="leaderboard" routerLinkActive="active">Dashboard</a>
         </li>
         <li class="nav-item" *ngIf="us.userLoginStatus">
           <a class="nav-link" routerLink="contactus" routerLinkActive="active">Contactus</a>
