--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,8 +23,11 @@
           <a class="nav-link" routerLink="contactus" routerLinkActive="active">Contactus</a>
         </li>
         <li class="nav-item" *ngIf="us.userLoginStatus">
-          <a class="nav-link" routerLink="leaderboard" routerLinkActive="active">Dashboard<i class="fa fa-solid fa-user"></i></a>
+          <a class="nav-link" routerLink="dashboard" routerLinkActive="active">Dashboard <i class="fa fa-solid fa-user"></i></a>
         </li>
+        <li class="nav-item" *ngIf="us.userLoginStatus">
+          <a class="nav-link" routerLink="leaderboard" routerLinkActive="active">Leaderboard</a>
+        </li> 
         
         <li class="nav-item" *ngIf="us.userLoginStatus || us.masterLoginStatus">
           <a class="nav-link" routerLink="login" routerLinkActive="active" (click)="userLogout()">Logout</a>
