--- a/src/app/leaderboard/leaderboard.component.css
+++ b/src/app/leaderboard/leaderboard.component.css
@@ -1,3 +1,8 @@
 .container{
-    min-height: 1000vh;
+    min-height: 500vh;
+}
+#glow{
+    color: rgb(147, 38, 38);
+    font-family: 'Montserrat';
+    font-weight: bold;
 }
