midmarks insertion commit

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
         </label>
         <a><p class="forgot-pass">Forgot password?</p></a>
         <button type="submit" class="submit">Sign In</button>
-        <button type="button" class="fb-btn">Connect with <span>facebook</span></button>
+        <button type="button" class="fb-btn"><a href="https://www.facebook.com/" target="_blank">Connect with <span>facebook</span></a></button>
       </div>
     </form>
     <div class="sub-cont">
@@ -25,7 +25,7 @@
         </div>
         <div class="img__text m--in">
           <h2>One of us?</h2>
-          <p>If you already has an account, just sign in. We've missed you!</p>
+          <p>If you already have an account, just sign in. We've missed you!</p>
         </div>
         <div class="img__btn">
           <span class="m--up">Sign Up</span>
