--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -7,7 +7,7 @@
           <div class="card-body">
             <h2 class="card-title text-center text-danger text-uppercase">{{m}}</h2>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary d-block mx-auto" routerLink="{{m}}" (click)="openFullscreen()">Take Test</a>
+            <a class="btn btn-primary d-block mx-auto" routerLink="{{m}}" (click)="openFullscreen()">Take Test</a>
           </div>
         </div>
       </div>   
