--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -10,7 +10,10 @@ body {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   background: #ededed;
 }
-
+a{
+  text-decoration: none;
+  color: #272323;
+}
 input,
 button {
   border: none;
