--- a/src/app/newadmin/newadmin.component.html
+++ b/src/app/newadmin/newadmin.component.html
@@ -5,6 +5,12 @@
     <li class="nav-item mx-3">
       <a class="nav-link text-white bg-primary"  routerLink="view-scores" routerLinkActive="active">View Results</a>
     </li>
+    <li class="nav-item mx-3">
+      <a class="nav-link text-white bg-primary" routerLink="add-mid-marks" routerLinkActive="active">Add Mid-marks</a>
+    </li>
+    <li class="nav-item mx-3">
+      <a class="nav-link text-white bg-primary" routerLink="view-mid-marks" routerLinkActive="active" >View Mid-marks</a>
+    </li>
     
   
   </ul>
